src/test/ui/issue-40350.stderr
error: compilation successful
  --> $DIR/issue-40350.rs:22:1
   |
LL | fn main() {}
   | ^^^^^^^^^^^^

error: aborting due to previous error

